src/lib/compiler/generated/IEC61131Parser.ts
// Generated from src/lib/compiler/IEC61131.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { IEC61131Listener } from "./IEC61131Listener";
import { IEC61131Visitor } from "./IEC61131Visitor";


export class IEC61131Parser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly T__4 = 5;
	public static readonly T__5 = 6;
	public static readonly T__6 = 7;
	public static readonly T__7 = 8;
	public static readonly T__8 = 9;
	public static readonly T__9 = 10;
	public static readonly T__10 = 11;
	public static readonly T__11 = 12;
	public static readonly T__12 = 13;
	public static readonly T__13 = 14;
	public static readonly T__14 = 15;
	public static readonly T__15 = 16;
	public static readonly T__16 = 17;
	public static readonly T__17 = 18;
	public static readonly T__18 = 19;
	public static readonly T__19 = 20;
	public static readonly T__20 = 21;
	public static readonly T__21 = 22;
	public static readonly T__22 = 23;
	public static readonly T__23 = 24;
	public static readonly T__24 = 25;
	public static readonly T__25 = 26;
	public static readonly T__26 = 27;
	public static readonly T__27 = 28;
	public static readonly T__28 = 29;
	public static readonly T__29 = 30;
	public static readonly T__30 = 31;
	public static readonly T__31 = 32;
	public static readonly T__32 = 33;
	public static readonly T__33 = 34;
	public static readonly T__34 = 35;
	public static readonly T__35 = 36;
	public static readonly T__36 = 37;
	public static readonly T__37 = 38;
	public static readonly T__38 = 39;
	public static readonly T__39 = 40;
	public static readonly T__40 = 41;
	public static readonly T__41 = 42;
	public static readonly T__42 = 43;
	public static readonly T__43 = 44;
	public static readonly T__44 = 45;
	public static readonly T__45 = 46;
	public static readonly T__46 = 47;
	public static readonly T__47 = 48;
	public static readonly T__48 = 49;
	public static readonly T__49 = 50;
	public static readonly T__50 = 51;
	public static readonly T__51 = 52;
	public static readonly T__52 = 53;
	public static readonly T__53 = 54;
	public static readonly T__54 = 55;
	public static readonly T__55 = 56;
	public static readonly T__56 = 57;
	public static readonly T__57 = 58;
	public static readonly T__58 = 59;
	public static readonly T__59 = 60;
	public static readonly T__60 = 61;
	public static readonly T__61 = 62;
	public static readonly T__62 = 63;
	public static readonly T__63 = 64;
	public static readonly T__64 = 65;
	public static readonly T__65 = 66;
	public static readonly T__66 = 67;
	public static readonly T__67 = 68;
	public static readonly T__68 = 69;
	public static readonly T__69 = 70;
	public static readonly T__70 = 71;
	public static readonly T__71 = 72;
	public static readonly T__72 = 73;
	public static readonly T__73 = 74;
	public static readonly T__74 = 75;
	public static readonly T__75 = 76;
	public static readonly T__76 = 77;
	public static readonly T__77 = 78;
	public static readonly T__78 = 79;
	public static readonly T__79 = 80;
	public static readonly T__80 = 81;
	public static readonly ASSIGN = 82;
	public static readonly EQ = 83;
	public static readonly NE = 84;
	public static readonly LT = 85;
	public static readonly GT = 86;
	public static readonly LE = 87;
	public static readonly GE = 88;
	public static readonly PLUS = 89;
	public static readonly MINUS = 90;
	public static readonly MULT = 91;
	public static readonly DIV = 92;
	public static readonly MOD = 93;
	public static readonly POWER = 94;
	public static readonly OR = 95;
	public static readonly XOR = 96;
	public static readonly AND = 97;
	public static readonly NOT = 98;
	public static readonly AT = 99;
	public static readonly ID = 100;
	public static readonly INT = 101;
	public static readonly HEX_INT = 102;
	public static readonly REAL_NUM = 103;
	public static readonly STRING_LITERAL = 104;
	public static readonly TIME_LITERAL = 105;
	public static readonly WS = 106;
	public static readonly COMMENT = 107;
	public static readonly LINE_COMMENT = 108;
	public static readonly RULE_program = 0;
	public static readonly RULE_library_element = 1;
	public static readonly RULE_global_var_declarations = 2;
	public static readonly RULE_program_declaration = 3;
	public static readonly RULE_function_block_declaration = 4;
	public static readonly RULE_configuration_declaration = 5;
	public static readonly RULE_resource_declaration = 6;
	public static readonly RULE_task_configuration = 7;
	public static readonly RULE_program_configuration = 8;
	public static readonly RULE_var_declarations = 9;
	public static readonly RULE_constant_qualifier = 10;
	public static readonly RULE_retain_qualifier = 11;
	public static readonly RULE_var_decl_list = 12;
	public static readonly RULE_var_decl = 13;
	public static readonly RULE_identifier_list = 14;
	public static readonly RULE_location = 15;
	public static readonly RULE_data_type = 16;
	public static readonly RULE_elementary_data_type = 17;
	public static readonly RULE_derived_data_type = 18;
	public static readonly RULE_array_data_type = 19;
	public static readonly RULE_subrange = 20;
	public static readonly RULE_body = 21;
	public static readonly RULE_statement_list = 22;
	public static readonly RULE_statement = 23;
	public static readonly RULE_assignment_statement = 24;
	public static readonly RULE_subprogram_control_statement = 25;
	public static readonly RULE_fb_call = 26;
	public static readonly RULE_param_assignment = 27;
	public static readonly RULE_selection_statement = 28;
	public static readonly RULE_if_statement = 29;
	public static readonly RULE_case_statement = 30;
	public static readonly RULE_case_element = 31;
	public static readonly RULE_case_list = 32;
	public static readonly RULE_case_list_element = 33;
	public static readonly RULE_iteration_statement = 34;
	public static readonly RULE_for_statement = 35;
	public static readonly RULE_while_statement = 36;
	public static readonly RULE_repeat_statement = 37;
	public static readonly RULE_expression = 38;
	public static readonly RULE_atom = 39;
	public static readonly RULE_function_call = 40;
	public static readonly RULE_variable = 41;
	public static readonly RULE_constant = 42;
	public static readonly RULE_numeric_literal = 43;
	public static readonly RULE_boolean_literal = 44;
	public static readonly RULE_string_literal = 45;
	public static readonly RULE_time_literal = 46;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"program", "library_element", "global_var_declarations", "program_declaration", 
		"function_block_declaration", "configuration_declaration", "resource_declaration", 
		"task_configuration", "program_configuration", "var_declarations", "constant_qualifier", 
		"retain_qualifier", "var_decl_list", "var_decl", "identifier_list", "location", 
		"data_type", "elementary_data_type", "derived_data_type", "array_data_type", 
		"subrange", "body", "statement_list", "statement", "assignment_statement", 
		"subprogram_control_statement", "fb_call", "param_assignment", "selection_statement", 
		"if_statement", "case_statement", "case_element", "case_list", "case_list_element", 
		"iteration_statement", "for_statement", "while_statement", "repeat_statement", 
		"expression", "atom", "function_call", "variable", "constant", "numeric_literal", 
		"boolean_literal", "string_literal", "time_literal",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'VAR_GLOBAL'", "'END_VAR'", "'PROGRAM'", "'END_PROGRAM'", 
		"'FUNCTION_BLOCK'", "'END_FUNCTION_BLOCK'", "'CONFIGURATION'", "'END_CONFIGURATION'", 
		"'RESOURCE'", "'ON'", "'END_RESOURCE'", "'TASK'", "'('", "'INTERVAL'", 
		"','", "'PRIORITY'", "')'", "';'", "'WITH'", "':'", "'VAR_INPUT'", "'VAR_OUTPUT'", 
		"'VAR_IN_OUT'", "'VAR'", "'VAR_TEMP'", "'CONSTANT'", "'RETAIN'", "'%'", 
		"'I'", "'Q'", "'M'", "'BOOL'", "'SINT'", "'INT'", "'DINT'", "'LINT'", 
		"'USINT'", "'UINT'", "'UDINT'", "'ULINT'", "'REAL'", "'LREAL'", "'TIME'", 
		"'DATE'", "'TIME_OF_DAY'", "'TOD'", "'DATE_AND_TIME'", "'DT'", "'STRING'", 
		"'BYTE'", "'WORD'", "'DWORD'", "'LWORD'", "'WSTRING'", "'ARRAY'", "'['", 
		"']'", "'OF'", "'..'", "'RETURN'", "'=>'", "'IF'", "'THEN'", "'ELSIF'", 
		"'ELSE'", "'END_IF'", "'CASE'", "'END_CASE'", "'FOR'", "'TO'", "'BY'", 
		"'DO'", "'END_FOR'", "'WHILE'", "'END_WHILE'", "'REPEAT'", "'UNTIL'", 
		"'END_REPEAT'", "'.'", "'TRUE'", "'FALSE'", "':='", "'='", "'<>'", "'<'", 
		"'>'", "'<='", "'>='", "'+'", "'-'", "'*'", "'/'", "'MOD'", "'**'", "'OR'", 
		"'XOR'", "'AND'", "'NOT'", "'AT'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, "ASSIGN", "EQ", 
		"NE", "LT", "GT", "LE", "GE", "PLUS", "MINUS", "MULT", "DIV", "MOD", "POWER", 
		"OR", "XOR", "AND", "NOT", "AT", "ID", "INT", "HEX_INT", "REAL_NUM", "STRING_LITERAL", 
		"TIME_LITERAL", "WS", "COMMENT", "LINE_COMMENT",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(IEC61131Parser._LITERAL_NAMES, IEC61131Parser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return IEC61131Parser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "IEC61131.g4"; }

	// @Override
	public get ruleNames(): string[] { return IEC61131Parser.ruleNames; }

	// @Override
	public get serializedATN(): string { return IEC61131Parser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(IEC61131Parser._ATN, this);
	}
	// @RuleVersion(0)
	public program(): ProgramContext {
		let _localctx: ProgramContext = new ProgramContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, IEC61131Parser.RULE_program);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 95;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 94;
				this.library_element();
				}
				}
				this.state = 97;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << IEC61131Parser.T__0) | (1 << IEC61131Parser.T__2) | (1 << IEC61131Parser.T__4) | (1 << IEC61131Parser.T__6))) !== 0));
			this.state = 99;
			this.match(IEC61131Parser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public library_element(): Library_elementContext {
		let _localctx: Library_elementContext = new Library_elementContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, IEC61131Parser.RULE_library_element);
		try {
			this.state = 105;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case IEC61131Parser.T__4:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 101;
				this.function_block_declaration();
				}
				break;
			case IEC61131Parser.T__2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 102;
				this.program_declaration();
				}
				break;
			case IEC61131Parser.T__6:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 103;
				this.configuration_declaration();
				}
				break;
			case IEC61131Parser.T__0:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 104;
				this.global_var_declarations();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public global_var_declarations(): Global_var_declarationsContext {
		let _localctx: Global_var_declarationsContext = new Global_var_declarationsContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, IEC61131Parser.RULE_global_var_declarations);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 107;
			this.match(IEC61131Parser.T__0);
			this.state = 109;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === IEC61131Parser.T__25) {
				{
				this.state = 108;
				this.constant_qualifier();
				}
			}

			this.state = 112;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === IEC61131Parser.T__26) {
				{
				this.state = 111;
				this.retain_qualifier();
				}
			}

			this.state = 114;
			this.var_decl_list();
			this.state = 115;
			this.match(IEC61131Parser.T__1);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public program_declaration(): Program_declarationContext {
		let _localctx: Program_declarationContext = new Program_declarationContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, IEC61131Parser.RULE_program_declaration);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 117;
			this.match(IEC61131Parser.T__2);
			this.state = 118;
			this.match(IEC61131Parser.ID);
			this.state = 122;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << IEC61131Parser.T__20) | (1 << IEC61131Parser.T__21) | (1 << IEC61131Parser.T__22) | (1 << IEC61131Parser.T__23) | (1 << IEC61131Parser.T__24))) !== 0)) {
				{
				{
				this.state = 119;
				this.var_declarations();
				}
				}
				this.state = 124;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 125;
			this.body();
			this.state = 126;
			this.match(IEC61131Parser.T__3);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public function_block_declaration(): Function_block_declarationContext {
		let _localctx: Function_block_declarationContext = new Function_block_declarationContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, IEC61131Parser.RULE_function_block_declaration);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 128;
			this.match(IEC61131Parser.T__4);
			this.state = 129;
			this.match(IEC61131Parser.ID);
			this.state = 133;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << IEC61131Parser.T__20) | (1 << IEC61131Parser.T__21) | (1 << IEC61131Parser.T__22) | (1 << IEC61131Parser.T__23) | (1 << IEC61131Parser.T__24))) !== 0)) {
				{
				{
				this.state = 130;
				this.var_declarations();
				}
				}
				this.state = 135;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 136;
			this.body();
			this.state = 137;
			this.match(IEC61131Parser.T__5);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public configuration_declaration(): Configuration_declarationContext {
		let _localctx: Configuration_declarationContext = new Configuration_declarationContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, IEC61131Parser.RULE_configuration_declaration);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 139;
			this.match(IEC61131Parser.T__6);
			this.state = 140;
			this.match(IEC61131Parser.ID);
			this.state = 142;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				{
				this.state = 141;
				this.resource_declaration();
				}
				}
				this.state = 144;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while (_la === IEC61131Parser.T__8);
			this.state = 146;
			this.match(IEC61131Parser.T__7);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public resource_declaration(): Resource_declarationContext {
		let _localctx: Resource_declarationContext = new Resource_declarationContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, IEC61131Parser.RULE_resource_declaration);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 148;
			this.match(IEC61131Parser.T__8);
			this.state = 149;
			this.match(IEC61131Parser.ID);
			this.state = 150;
			this.match(IEC61131Parser.T__9);
			this.state = 151;
			this.match(IEC61131Parser.ID);
			this.state = 155;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === IEC61131Parser.T__11) {
				{
				{
				this.state = 152;
				this.task_configuration();
				}
				}
				this.state = 157;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 161;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === IEC61131Parser.T__2) {
				{
				{
				this.state = 158;
				this.program_configuration();
				}
				}
				this.state = 163;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 164;
			this.match(IEC61131Parser.T__10);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public task_configuration(): Task_configurationContext {
		let _localctx: Task_configurationContext = new Task_configurationContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, IEC61131Parser.RULE_task_configuration);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 166;
			this.match(IEC61131Parser.T__11);
			this.state = 167;
			this.match(IEC61131Parser.ID);
			this.state = 168;
			this.match(IEC61131Parser.T__12);
			this.state = 169;
			this.match(IEC61131Parser.T__13);
			this.state = 170;
			this.match(IEC61131Parser.ASSIGN);
			this.state = 171;
			this.time_literal();
			this.state = 172;
			this.match(IEC61131Parser.T__14);
			this.state = 173;
			this.match(IEC61131Parser.T__15);
			this.state = 174;
			this.match(IEC61131Parser.ASSIGN);
			this.state = 175;
			this.match(IEC61131Parser.INT);
			this.state = 176;
			this.match(IEC61131Parser.T__16);
			this.state = 177;
			this.match(IEC61131Parser.T__17);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public program_configuration(): Program_configurationContext {
		let _localctx: Program_configurationContext = new Program_configurationContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, IEC61131Parser.RULE_program_configuration);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 179;
			this.match(IEC61131Parser.T__2);
			this.state = 180;
			this.match(IEC61131Parser.ID);
			this.state = 183;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === IEC61131Parser.T__18) {
				{
				this.state = 181;
				this.match(IEC61131Parser.T__18);
				this.state = 182;
				this.match(IEC61131Parser.ID);
				}
			}

			this.state = 185;
			this.match(IEC61131Parser.T__19);
			this.state = 186;
			this.match(IEC61131Parser.ID);
			this.state = 199;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === IEC61131Parser.T__12) {
				{
				this.state = 187;
				this.match(IEC61131Parser.T__12);
				this.state = 196;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === IEC61131Parser.T__12 || ((((_la - 80)) & ~0x1F) === 0 && ((1 << (_la - 80)) & ((1 << (IEC61131Parser.T__79 - 80)) | (1 << (IEC61131Parser.T__80 - 80)) | (1 << (IEC61131Parser.PLUS - 80)) | (1 << (IEC61131Parser.MINUS - 80)) | (1 << (IEC61131Parser.NOT - 80)) | (1 << (IEC61131Parser.ID - 80)) | (1 << (IEC61131Parser.INT - 80)) | (1 << (IEC61131Parser.HEX_INT - 80)) | (1 << (IEC61131Parser.REAL_NUM - 80)) | (1 << (IEC61131Parser.STRING_LITERAL - 80)) | (1 << (IEC61131Parser.TIME_LITERAL - 80)))) !== 0)) {
					{
					this.state = 188;
					this.param_assignment();
					this.state = 193;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
					while (_la === IEC61131Parser.T__14) {
						{
						{
						this.state = 189;
						this.match(IEC61131Parser.T__14);
						this.state = 190;
						this.param_assignment();
						}
						}
						this.state = 195;
						this._errHandler.sync(this);
						_la = this._input.LA(1);
					}
					}
				}

				this.state = 198;
				this.match(IEC61131Parser.T__16);
				}
			}

			this.state = 201;
			this.match(IEC61131Parser.T__17);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public var_declarations(): Var_declarationsContext {
		let _localctx: Var_declarationsContext = new Var_declarationsContext(this._ctx, this.state);
		this.enterRule(_localctx, 18, IEC61131Parser.RULE_var_declarations);
		let _la: number;
		try {
			this.state = 229;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case IEC61131Parser.T__20:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 203;
				this.match(IEC61131Parser.T__20);
				this.state = 204;
				this.var_decl_list();
				this.state = 205;
				this.match(IEC61131Parser.T__1);
				}
				break;
			case IEC61131Parser.T__21:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 207;
				this.match(IEC61131Parser.T__21);
				this.state = 208;
				this.var_decl_list();
				this.state = 209;
				this.match(IEC61131Parser.T__1);
				}
				break;
			case IEC61131Parser.T__22:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 211;
				this.match(IEC61131Parser.T__22);
				this.state = 212;
				this.var_decl_list();
				this.state = 213;
				this.match(IEC61131Parser.T__1);
				}
				break;
			case IEC61131Parser.T__23:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 215;
				this.match(IEC61131Parser.T__23);
				this.state = 217;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === IEC61131Parser.T__25) {
					{
					this.state = 216;
					this.constant_qualifier();
					}
				}
